+ : new feature
- : deprecated feature
* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.

Changes in ATK 5.2.1
--------------------
+ Added preliminary CSV export handler (NF_EXPORT). [Ivo]
+ Added additional http/1.1 304 not modified header. Document lastmodified
  timestamp is compared to the client's if-modified-since header. [Martin]
+ atkAggregatedColumn::display() now supports $mode param. [Ivo]
+ Added Oracle demo installation file to the demo. [Ivo]
* Changed the addMlCondition so that is uses ATK_VARS["lng"] instead of a 
  global value $lng which isn't always set [MartinL]
* Adding a multilanguage condition now takes into concideration the current
  language. Not just the default language. [MartinL]
* Fixed bug in multi-select search of atkManyToOneRelation. [Ivo]
* Missing db error translations no longer cause fatal error message. [Ivo]
* Fixed bug and cleaned up code in atkOneToManyRelation searching. [Ivo]
* atkTextAttribute's $size parameter detection is now a bit smarter. [Ivo]
* Fixed error in CSV import handler. [Boy]
* Default $config_sequenceprefix is now "seq_". (bug #365) [Ivo]
* Fixed fatal error in add screen when insert query would fail. [Ivo]
* Fixed bug where searching on dates would always add 19 or 20 
  in front of the year. [Boy]
* Fixed bug in exportFile() that would prevent exporting with MSIE and SSL. [Boy]
* Improvements to Oracle OCI9 driver error handling. [Ivo]
- Removed $m_critical_error lists from the db drivers. Anything that's not a
  userlevel error should be considered critical. [Ivo]
- Removed atkAttribute::display_plain(). [Ivo]

Changes in ATK 5.2.0
--------------------
+ Added the SimpleTest testframework for unittesting, including a set of test
  utilities. [Ivo]
+ Added atkFckAttribute (wysywig editor). [Fabrizio, Ivo]
+ atkOneToMany's in edit screens can now be searched and sorted. [Boy]